[package]
name = "revise"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
dirs = "3.0.2"
rusqlite = { version = "0.25.3", features=["chrono"]}
chrono = "0.4.19"
colored = "2.0.0"
thiserror = "1.0.25"